--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -7,16 +7,16 @@ source:
     git_tag: v4.4.3
 
 build:
-    number: 1
+    number: 2
     skip: True  # [win]
 
 requirements:
     build:
-        - libnetcdf
+        - libnetcdf 4.3*
         - krb5
         - gcc
     run:
-        - libnetcdf
+        - libnetcdf 4.3*
         - krb5
         - libgcc
 
