--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,22 +1,24 @@
+{% set version = "4.4.4" %}
 package:
     name: netcdf-fortran
-    version: 4.4.3
+    version: {{ version }}
 
 source:
-    git_url: https://github.com/Unidata/netcdf-fortran
-    git_tag: v4.4.3
+    fn: netcdf-fortran-{{ version }}.tar.gz
+    url: https://github.com/Unidata/netcdf-fortran/archive/v{{ version }}.tar.gz
+    sha256: 44b1986c427989604df9925dcdbf6c1a977e4ecbde6dd459114bca20bf5e9e67
 
 build:
-    number: 2
+    number: 1
     skip: True  # [win]
 
 requirements:
     build:
-        - libnetcdf 4.3*
+        - libnetcdf 4.4*
         - krb5
         - gcc
     run:
-        - libnetcdf 4.3*
+        - libnetcdf 4.4*
         - krb5
         - libgcc
 
