--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,17 +11,19 @@ source:
     - no_clang.patch  # [osx]
 
 build:
-  number: 4
+  number: 5
   skip: True  # [win]
 
 requirements:
   build:
     - cmake
     - libnetcdf 4.4.*
+    - hdf5 1.8.18|1.8.18.*
     - pkg-config  # [not win]
     - gcc  # [not win]
   run:
     - libnetcdf 4.4.*
+    - hdf5 1.8.18|1.8.18.*
     - libgcc  # [linux]
     - libgfortran  # [osx]
 
