--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,18 +11,18 @@ source:
     - no_clang.patch  # [osx]
 
 build:
-  number: 6
+  number: 7
   skip: True  # [win]
 
 requirements:
   build:
     - cmake
-    - libnetcdf 4.4.*
+    - libnetcdf 4.5.*
     - hdf5 1.10.1
     - pkg-config  # [not win]
     - gcc  # [not win]
   run:
-    - libnetcdf 4.4.*
+    - libnetcdf >=4.5
     - hdf5 1.10.1
     - libgcc  # [linux]
     - libgfortran  # [osx]
@@ -37,6 +37,7 @@ test:
 about:
   home: https://github.com/Unidata/netcdf-fortran
   license: http://www.unidata.ucar.edu/software/netcdf/copyright.html
+  license_file: COPYRIGHT
   summary: 'Unidata NetCDF Fortran Library.'
 
 extra:
