--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,7 +11,7 @@ source:
     - no_clang.patch  # [osx]
 
 build:
-  number: 8
+  number: 9
   skip: True  # [win]
 
 requirements:
@@ -31,14 +31,12 @@ test:
   commands:
     #- nf-config --all  # FIXME: no nf-config for cmake
     - test -f ${PREFIX}/lib/libnetcdf.a  # [unix]
-    - conda inspect linkages -p $PREFIX $PKG_NAME  # [not win]
-    - conda inspect objects -p $PREFIX $PKG_NAME  # [osx]
 
 about:
   home: https://github.com/Unidata/netcdf-fortran
   license: http://www.unidata.ucar.edu/software/netcdf/copyright.html
   license_file: COPYRIGHT
-  summary: 'Unidata NetCDF Fortran Library.'
+  summary: 'Unidata NetCDF Fortran Library'
 
 extra:
   recipe-maintainers:
