--- a/.ci_support/linux_c_compilertoolchain_cfortran_compilertoolchain_fort.yaml
+++ b/.ci_support/linux_c_compilertoolchain_cfortran_compilertoolchain_fort.yaml
@@ -1,3 +1,5 @@
+build_number_decrement:
+- '1000'
 c_compiler:
 - toolchain_c
 channel_sources:
@@ -9,11 +11,16 @@ docker_image:
 fortran_compiler:
 - toolchain_fort
 hdf5:
-- 1.10.3
+- 1.10.4
 libnetcdf:
 - '4.6'
 pin_run_as_build:
-  hdf5:
-    max_pin: x.x.x
   libnetcdf:
     max_pin: x.x
+zip_keys:
+- - c_compiler
+  - fortran_compiler
+  - channel_sources
+  - channel_targets
+  - docker_image
+  - build_number_decrement
