--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -21,8 +21,8 @@ requirements:
     - {{ compiler('fortran') }}
     - {{ compiler('c') }}
   host:
-    - libnetcdf >=4.6.2
-    - hdf5
+    - libnetcdf <=4.6.1
+    - hdf5 <= 1.10.3
 
 test:
   commands:
