--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,6 +35,38 @@ jobs:
       - run:
           # Run, test and (if we have a BINSTAR_TOKEN) upload the distributions.
           command: ./.circleci/run_docker_build.sh
+  build_osx_c_compilerclangfortran_compilergfortran:
+    working_directory: ~/test
+    macos:
+      xcode: "9.0"
+    environment:
+      - CONFIG: "osx_c_compilerclangfortran_compilergfortran"
+    steps:
+      - checkout
+      - run:
+          name: Fast finish outdated PRs and merge PRs
+          command: |
+            ./.circleci/fast_finish_ci_pr_build.sh
+            ./.circleci/checkout_merge_commit.sh
+      - run:
+          # Run, test and (if we have a BINSTAR_TOKEN) upload the distributions.
+          command: ./.circleci/run_osx_build.sh
+  build_osx_c_compilertoolchain_cfortran_compilertoolchain_fort:
+    working_directory: ~/test
+    macos:
+      xcode: "9.0"
+    environment:
+      - CONFIG: "osx_c_compilertoolchain_cfortran_compilertoolchain_fort"
+    steps:
+      - checkout
+      - run:
+          name: Fast finish outdated PRs and merge PRs
+          command: |
+            ./.circleci/fast_finish_ci_pr_build.sh
+            ./.circleci/checkout_merge_commit.sh
+      - run:
+          # Run, test and (if we have a BINSTAR_TOKEN) upload the distributions.
+          command: ./.circleci/run_osx_build.sh
 
 workflows:
   version: 2
@@ -42,3 +74,5 @@ workflows:
     jobs:
       - build_linux_c_compilergccfortran_compilergfortran
       - build_linux_c_compilertoolchain_cfortran_compilertoolchain_fort
+      - build_osx_c_compilerclangfortran_compilergfortran
+      - build_osx_c_compilertoolchain_cfortran_compilertoolchain_fort
