--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -26,7 +26,7 @@ requirements:
 
 test:
   commands:
-    #- nf-config --all  # FIXME: no nf-config for cmake
+    - nf-config --all
     - test -f ${PREFIX}/lib/libnetcdf.a  # [unix]
 
 about:
