--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,12 @@
 {% set version = "4.5.2" %}
+{% set build = 2 %}
+
+# recipe-lint fails if mpi is undefined
+{% set mpi = mpi or 'nompi' %}
+{% if mpi == "nompi" %}
+# prioritize nompi via build number
+{% set build = build + 100 %}
+{% endif %}
 
 package:
   name: netcdf-fortran
@@ -11,8 +19,21 @@ source:
     - no_clang.patch
 
 build:
-  number: 1
+  number: {{ build }}
   skip: True  # [win]
+
+  # add build string so packages can depend on
+  # mpi or nompi variants explicitly:
+  # `netcdf-fortran * mpi_mpich_*` for mpich
+  # `netcdf-fortran * mpi_*` for any mpi
+  # `netcdf-fortran * nompi_*` for no mpi
+
+  {% if mpi != 'nompi' %}
+  {% set mpi_prefix = "mpi_" + mpi %}
+  {% else %}
+  {% set mpi_prefix = "nompi" %}
+  {% endif %}
+  string: "{{ mpi_prefix }}_h{{ PKG_HASH }}_{{ build }}"
 
 requirements:
   build:
@@ -21,8 +42,17 @@ requirements:
     - {{ compiler('fortran') }}
     - {{ compiler('c') }}
   host:
+    # need to list hdf5 and libnetcdf twice to get version pinning from conda_build_config
+    # and build pinning from {{ mpi_prefix }}
     - libnetcdf
+    - libnetcdf * {{ mpi_prefix }}_*
     - hdf5
+    - hdf5 * {{ mpi_prefix }}_*
+    - {{ mpi }}  # [mpi != 'nompi']
+  run:
+    - libnetcdf * {{ mpi_prefix }}_*
+    - hdf5 * {{ mpi_prefix }}_*
+    - {{ mpi }}  # [mpi != 'nompi']
 
 test:
   commands:
@@ -40,3 +70,4 @@ extra:
     - ocefpaf
     - bekozi
     - beckermr
+    - xylar
