--- a/.ci_support/osx_mpinompi.yaml
+++ b/.ci_support/osx_mpinompi.yaml
@@ -1,13 +1,13 @@
+MACOSX_DEPLOYMENT_TARGET:
+- '10.9'
 c_compiler:
-- gcc
+- clang
 c_compiler_version:
-- '7'
+- '9'
 channel_sources:
 - conda-forge,defaults
 channel_targets:
 - conda-forge main
-docker_image:
-- condaforge/linux-anvil-comp7
 fortran_compiler:
 - gfortran
 fortran_compiler_version:
@@ -15,7 +15,13 @@ fortran_compiler_version:
 hdf5:
 - 1.10.5
 libnetcdf:
-- 4.6.2
+- 4.7.1
+macos_machine:
+- x86_64-apple-darwin13.4.0
+macos_min_version:
+- '10.9'
+mpi:
+- nompi
 pin_run_as_build:
   libnetcdf:
     max_pin: x.x.x
