Add make to build requirements

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -41,6 +41,7 @@ requirements:
     - pkg-config  # [not win]
     - {{ compiler('fortran') }}
     - {{ compiler('c') }}
+    - make  # [not win]
   host:
     # need to list hdf5 and libnetcdf twice to get version pinning from conda_build_config
     # and build pinning from {{ mpi_prefix }}
