--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -38,9 +38,11 @@ build:
 requirements:
   build:
     - cmake
+    - make
     - pkg-config  # [not win]
     - {{ compiler('fortran') }}
     - {{ compiler('c') }}
+
   host:
     # need to list hdf5 and libnetcdf twice to get version pinning from conda_build_config
     # and build pinning from {{ mpi_prefix }}
