--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -20,7 +20,6 @@ source:
 
 build:
   number: {{ build }}
-  skip: True  # [win]
   merge_build_host: True
 
   # add build string so packages can depend on
@@ -42,7 +41,7 @@ requirements:
     - pkg-config  # [not win]
     - {{ compiler('fortran') }}
     - {{ compiler('c') }}
-    - make  # [not win]
+    - make
   host:
     # need to list hdf5 and libnetcdf twice to get version pinning from conda_build_config
     # and build pinning from {{ mpi_prefix }}
