--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -21,6 +21,7 @@ source:
 build:
   number: {{ build }}
   skip: true  # [win]
+  merge_build_host: True
 
   # add build string so packages can depend on
   # mpi or nompi variants explicitly:
