Try with m2 compilers

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -50,10 +50,13 @@ requirements:
   build:
     - cmake
     - pkg-config  # [not win]
-    - {{ compiler('fortran') }}
-    - {{ compiler('c') }}
-    - make  # [not win]
+    - m2w64-pkg-config  # [win]
+    - {{ compiler('fortran') }}  # [not win]
+    - {{ compiler('m2w64_fortran') }}  # [win]
+    - {{ compiler('c') }}  # [not win]
+    - {{ compiler('m2w64_c') }}  # [win]
     - {{ mpi }}  # [mpi == 'openmpi' and build_platform != target_platform]
+    - make
   host:
     # need to list hdf5 and libnetcdf twice to get version pinning from conda_build_config
     # and build pinning from {{ mpi_prefix }}
@@ -69,11 +72,15 @@ requirements:
 
 test:
   requires:
-    - {{ compiler('fortran') }}
+    - {{ compiler('fortran') }}  # [not win]
+    - {{ compiler('m2w64_fortran') }}  # [win]
   commands:
     - nf-config --all
     - test -f $(nf-config --fc)
     - test -f $PREFIX/lib/libnetcdff${SHLIB_EXT}  # [not win]
+    - test -f $(nc-config --fc)  # [not win]
+    - test -f $PREFIX/lib/libnetcdf.a  # [not win]
+    - if not exist %LIBRARY_LIB%\libnetcdf.a exit 1  # [win]
 
 about:
   home: https://github.com/Unidata/netcdf-fortran
