--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -37,14 +37,19 @@ build:
 
 requirements:
   build:
-    - cmake
+    - cmake  # [unix]
+    - m2-autoconf  # [win]
+    - m2-sed  # [win]
+    - m2-grep  # [win]
     - pkg-config  # [not win]
     - m2w64-pkg-config  # [win]
     - {{ compiler('fortran') }}  # [not win]
     - {{ compiler('m2w64_fortran') }}  # [win]
     - {{ compiler('c') }}  # [not win]
     - {{ compiler('m2w64_c') }}  # [win]
-    - make
+    - m2w64-dlfcn  # [win]
+    - make  # [unix]
+    - m2-make  # [win]
   host:
     # need to list hdf5 and libnetcdf twice to get version pinning from conda_build_config
     # and build pinning from {{ mpi_prefix }}
@@ -66,7 +71,7 @@ test:
     - nf-config --help
     - test -f $(nc-config --fc)  # [not win]
     - test -f $PREFIX/lib/libnetcdf.a  # [not win]
-    - if not exist %LIBRARY_LIB%\libnetcdf.a exit 1  # [win]
+    - if not exist %LIBRARY_LIB%/libnetcdf.a exit 1  # [win]
 
 about:
   home: https://github.com/Unidata/netcdf-fortran
