--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -48,7 +48,10 @@ build:
 
 requirements:
   build:
-    - cmake
+    - cmake  # [unix]
+    - m2-autoconf  # [win]
+    - m2-sed  # [win]
+    - m2-grep  # [win]
     - pkg-config  # [not win]
     - m2w64-pkg-config  # [win]
     - {{ compiler('fortran') }}  # [not win]
@@ -56,7 +59,9 @@ requirements:
     - {{ compiler('c') }}  # [not win]
     - {{ compiler('m2w64_c') }}  # [win]
     - {{ mpi }}  # [mpi == 'openmpi' and build_platform != target_platform]
-    - make
+    - m2w64-dlfcn  # [win]
+    - make  # [unix]
+    - m2-make  # [win]
   host:
     # need to list hdf5 and libnetcdf twice to get version pinning from conda_build_config
     # and build pinning from {{ mpi_prefix }}
@@ -80,7 +85,7 @@ test:
     - test -f $PREFIX/lib/libnetcdff${SHLIB_EXT}  # [not win]
     - test -f $(nc-config --fc)  # [not win]
     - test -f $PREFIX/lib/libnetcdf.a  # [not win]
-    - if not exist %LIBRARY_LIB%\libnetcdf.a exit 1  # [win]
+    - if not exist %LIBRARY_LIB%/libnetcdf.a exit 1  # [win]
 
 about:
   home: https://github.com/Unidata/netcdf-fortran
