--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -43,7 +43,9 @@ requirements:
     - {{ compiler('fortran') }}
     - {{ compiler('c') }}
     - make  # [not win]
+    - libgfortran  # [osx]
   host:
+    - libgfortran  # [osx]
     # need to list hdf5 and libnetcdf twice to get version pinning from conda_build_config
     # and build pinning from {{ mpi_prefix }}
     - libnetcdf
