CMake in Windows too

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -38,7 +38,7 @@ build:
 requirements:
   build:
   host:
-    - cmake  # [unix]
+    - cmake
     - m2-autoconf  # [win]
     - m2-sed  # [win]
     - m2-grep  # [win]
