--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -20,7 +20,7 @@ source:
 
 build:
   number: {{ build }}
-  skip: true  # [win]
+  skip: true  # [(win and mpi!='nompi') or (not win)]
 
   # add build string so packages can depend on
   # mpi or nompi variants explicitly:
