--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -66,7 +66,7 @@ test:
 
 about:
   home: https://github.com/Unidata/netcdf-fortran
-  license: http://www.unidata.ucar.edu/software/netcdf/copyright.html
+  license: NetCDF
   license_file: COPYRIGHT
   summary: Unidata NetCDF Fortran Library
 
