--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -1,4 +1,10 @@
 mpi:
   - nompi
-  - mpich
-  - openmpi
+  - openmpi  # [not win]
+  - mpich  # [not win]
+
+pin_run_as_build:
+  openmpi: x.x
+
+pin_run_as_build:
+  mpich: x.x
