Move several dependencies from host to build
This is to match libnetcdf-feedstock

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -48,12 +48,13 @@ build:
 
 requirements:
   build:
-  host:
     - cmake
     - pkg-config  # [not win]
     - {{ compiler('fortran') }}
     - {{ compiler('c') }}
     - make  # [not win]
+    - {{ mpi }}  # [mpi == 'openmpi' and build_platform != target_platform]
+  host:
     # need to list hdf5 and libnetcdf twice to get version pinning from conda_build_config
     # and build pinning from {{ mpi_prefix }}
     - libnetcdf
