--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set version = "4.6.0" %}
-{% set build = 0 %}
+{% set build = 1 %}
 
 # recipe-lint fails if mpi is undefined
 {% set mpi = mpi or 'nompi' %}
@@ -43,7 +43,7 @@ build:
 
   run_exports:
     # https://abi-laboratory.pro/index.php?view=timeline&l=netcdf-fortran
-    - {{ pin_compatible('netcdf-fortran', max_pin='x.x') }} {{ build_pin }}
+    - {{ pin_subpackage('netcdf-fortran', max_pin='x.x') }} {{ build_pin }}
 
 requirements:
   build:
@@ -70,9 +70,9 @@ test:
   requires:
     - {{ compiler('fortran') }}
   commands:
-    - nf-config --help
-    - test -f $(nc-config --fc)
-    - test -f $PREFIX/lib/libnetcdf.a  # [not win]
+    - nf-config --all
+    - test -f $(nf-config --fc)
+    - test -f $PREFIX/lib/libnetcdff${SHLIB_EXT}  # [not win]
 
 about:
   home: https://github.com/Unidata/netcdf-fortran
