Guard windows incompatible tests

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -81,8 +81,8 @@ test:
     - {{ compiler('fortran') }}  # [not win]
     - {{ compiler('m2w64_fortran') }}  # [win]
   commands:
-    - nf-config --all
-    - test -f $(nf-config --fc)
+    - nf-config --all  # [not win]
+    - test -f $(nf-config --fc)  # [not win]
     - test -f $PREFIX/lib/libnetcdff${SHLIB_EXT}  # [not win]
     - test -f $(nc-config --fc)  # [not win]
     - test -f $PREFIX/lib/libnetcdf.a  # [not win]
