Adapt test to MinGW naming convention

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -86,7 +86,7 @@ test:
     - test -f $PREFIX/lib/libnetcdff${SHLIB_EXT}  # [not win]
     - test -f $(nc-config --fc)  # [not win]
     - test -f $PREFIX/lib/libnetcdf.a  # [not win]
-    - if not exist %LIBRARY_LIB%/libnetcdf.a exit 1  # [win]
+    - if not exist %LIBRARY_LIB%/libnetcdf.dll.a exit 1  # [win]
 
 about:
   home: https://github.com/Unidata/netcdf-fortran
