--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -18,6 +18,7 @@ source:
   patches:
     - 0001-no-clang.patch
     - manpage-quoting.patch
+    - mingw-export.patch
 
 build:
   number: {{ build }}
