Apply merge_build_host only on Windows

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -22,7 +22,7 @@ source:
 
 build:
   number: {{ build }}
-  merge_build_host: True
+  merge_build_host: True  # [win]
 
   # add build string so packages can depend on
   # mpi or nompi variants explicitly:
