--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -84,6 +84,7 @@ test:
     - nf-config --version  # [not win]
     - test -f $(nf-config --fc)  # [not win]
     - test -f $PREFIX/lib/libnetcdff${SHLIB_EXT}  # [not win]
+    # Check that libnetcdf's nc-config finds this package's nf-config
     - test -f $(nc-config --fc)  # [not win]
     # MinGW style import lib (.dll.a); check can be removed if we
     # switch to flang or similar, or if we decide to only ship .lib
