Make szip test verbose on Windows

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -19,6 +19,7 @@ source:
     - 0001-no-clang.patch
     - manpage-quoting.patch
     - make-v2compat-cachable.patch
+    - verbose-test-szip.patch  # [win]
 
 build:
   number: {{ build }}
