--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -52,20 +52,18 @@ requirements:
   build:
     # General
     - cmake
+    - pkg-config
     - {{ mpi }}  # [mpi == 'openmpi' and build_platform != target_platform]
     # Unix
     - {{ compiler('c') }}  # [unix]
     - {{ stdlib('c') }}  # [unix]
     - {{ compiler('fortran') }}  # [unix]
     - make  # [unix]
-    - pkg-config  # [unix]
     # Win
     - {{ compiler('m2w64_c') }}  # [win]
     - {{ stdlib('m2w64_c') }}  # [win]
     - {{ compiler('m2w64_fortran') }}  # [win]
     - m2-make  # [win]
-    - m2w64-pkg-config  # [win]
-    - m2w64-dlfcn  # [win]
   host:
     # need to list hdf5 and libnetcdf twice to get version pinning from conda_build_config
     # and build pinning from {{ mpi_prefix }}
