--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -63,7 +63,7 @@ requirements:
     - {{ compiler('m2w64_c') }}  # [win]
     - {{ stdlib('m2w64_c') }}  # [win]
     - {{ compiler('m2w64_fortran') }}  # [win]
-    - m2-make  # [win]
+    - ninja  # [win]
   host:
     # need to list hdf5 and libnetcdf twice to get version pinning from conda_build_config
     # and build pinning from {{ mpi_prefix }}
