--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -17,9 +17,9 @@ source:
   sha256: 44cc7b5626b0b054a8503b8fe7c1b0ac4e0a79a69dad792c212454906a9224ca
   patches:
     - 0001-no-clang.patch
-    - manpage-quoting.patch
-    - make-v2compat-cachable.patch
-    - szip.patch  # [win]
+    - 0002-manpage-quoting.patch
+    - 0003-make-v2compat-cachable.patch
+    - 0004-szip.patch  # [win]
 
 build:
   number: {{ build }}
